--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "madoc-example-plugin",
   "version": "1.0.0",
   "main": "index.js",
+  "description": "Madoc example plugin for demonstrating build process and API",
   "license": "MIT",
-  "dependencies": {
-    "enquirer": "^2.3.6"
+  "scripts": {
+    "start": "madoc-bundler --watch",
+    "build": "NODE_ENV=production madoc-bundler"
+  },
+  "repository": "https://github.com/stephenwf/madoc-example-plugin",
+  "madoc": {
+    "id": "7231e23f-80e3-4399-9720-971a6274b67f",
+    "name": "Madoc example plugin"
   },
   "devDependencies": {
+    "@madoc.io/bundler": "1.0.6",
     "@ampproject/rollup-plugin-closure-compiler": "^0.26.0",
-    "@capture-models/helpers": "^0.13.6",
-    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "rollup-plugin-typescript2": "^0.29.0",
     "@types/react": "^17.0.5",
     "@types/react-router-dom": "^5.1.7",
-    "node-fetch": "^2.6.1",
-    "react-router-dom": "^5.2.0",
+    "prettier": "^2.3.0",
     "rollup": "^2.47.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
