--- a/.github/workflows/publish-plugin.yaml
+++ b/.github/workflows/publish-plugin.yaml
@@ -1,7 +1,8 @@
 name: Node.js Package
 on:
-  release:
-    types: [released]
+  create:
+    tags:
+      - v*
 jobs:
   build:
     runs-on: ubuntu-latest
